--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://gitname.github.io/Social_Network_v4.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.2",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
@@ -18,6 +21,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
