--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "@types/react-router-dom": "^5.3.0",
     "gh-pages": "^3.2.3",
     "react-test-renderer": "^17.0.2"
