--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.9.2",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
